Notebook that reproduces Fig. 7 from de la Vega et al. (2025)

--- a/clumpy_galaxy_fraction.ipynb
+++ b/clumpy_galaxy_fraction.ipynb
@@ -1,8 +1,16 @@
 {
  "cells": [
   {
+   "cell_type": "markdown",
+   "id": "f94ad663",
+   "metadata": {},
+   "source": [
+    "### import modules"
+   ]
+  },
+  {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 9,
    "id": "b217115f",
    "metadata": {},
    "outputs": [],
@@ -10,45 +18,9 @@
     "import numpy as np\n",
     "\n",
     "import matplotlib.pyplot as plt\n",
-    "import matplotlib.path as mp_path\n",
     "%matplotlib inline\n",
     "\n",
     "from astropy.io import fits, ascii\n",
-    "from astropy.stats import sigma_clip\n",
-    "\n",
-    "from lmfit import Parameters, minimize\n",
-    "from lmfit.printfuncs import report_fit\n",
-    "\n",
-    "from astropy.coordinates import SkyCoord\n",
-    "import astropy.units as u\n",
-    "from astropy.nddata.utils import Cutout2D\n",
-    "from astropy.wcs import WCS\n",
-    "from astropy.convolution import convolve\n",
-    "from astropy.convolution import convolve_fft, Box2DKernel\n",
-    "from astropy.convolution import Gaussian2DKernel\n",
-    "from astropy.cosmology import Planck18\n",
-    "from astropy.stats import binom_conf_interval\n",
-    "\n",
-    "from scipy import fftpack\n",
-    "from scipy.optimize import curve_fit\n",
-    "\n",
-    "from photutils.segmentation import deblend_sources\n",
-    "from astropy.stats import gaussian_fwhm_to_sigma\n",
-    "from photutils import detect_sources\n",
-    "from photutils import detect_threshold\n",
-    "from photutils.segmentation import SourceCatalog\n",
-    "from photutils import CircularAperture, CircularAnnulus, aperture_photometry\n",
-    "\n",
-    "from skimage.segmentation import find_boundaries\n",
-    "\n",
-    "import math \n",
-    "\n",
-    "def nmad(x):\n",
-    "    return 1.48 * np.nanmedian( abs( x - np.nanmedian( x ) ) )\n",
-    "\n",
-    "def find_nearest(array,value):\n",
-    "    idx = (np.abs(array-value)).argmin()\n",
-    "    return idx\n",
     "\n",
     "params = {'text.usetex': False, 'mathtext.fontset': 'stixsans', 'font.family': 'sans-serif'}\n",
     "plt.rcParams.update(params)\n"
@@ -56,7 +28,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "bdfa3de5",
+   "id": "9c4ac685",
    "metadata": {},
    "source": [
     "### Compute clumpy fraction for GOODS-N and GOODS-S together\n",
@@ -65,7 +37,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 10,
    "id": "7b9e3326",
    "metadata": {},
    "outputs": [
@@ -166,7 +138,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "472f688d",
+   "id": "17edfacf",
    "metadata": {},
    "source": [
     "### Compute clumpy fraction for GOODS-N and GOODS-S separately\n",
@@ -175,7 +147,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 11,
    "id": "5b6163ac",
    "metadata": {},
    "outputs": [
@@ -224,7 +196,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "ae2f10a1",
+   "id": "5c1a3154",
    "metadata": {},
    "source": [
     "### Function for the cosmic SFR density from Madau & Dickinson (2014)"
@@ -232,7 +204,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 12,
    "id": "f1b9f147",
    "metadata": {},
    "outputs": [],
@@ -251,7 +223,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": 13,
    "id": "6489bfe0",
    "metadata": {},
    "outputs": [
